@@ -4409,6 +4409,23 @@ name|indexInfo
 operator|.
 name|add
 argument_list|(
+literal|"deletedDocs"
+argument_list|,
+name|reader
+operator|.
+name|maxDoc
+argument_list|()
+operator|-
+name|reader
+operator|.
+name|numDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|indexInfo
+operator|.
+name|add
+argument_list|(
 literal|"version"
 argument_list|,
 name|reader
