@@ -10050,6 +10050,23 @@ name|lst
 operator|.
 name|add
 argument_list|(
+literal|"deletedDocs"
+argument_list|,
+name|reader
+operator|.
+name|maxDoc
+argument_list|()
+operator|-
+name|reader
+operator|.
+name|numDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|lst
+operator|.
+name|add
+argument_list|(
 literal|"reader"
 argument_list|,
 name|reader
