@@ -184,6 +184,11 @@ limitations under the License.
                 <dd></dd>
             </dl></li>
 
+            <li class="deletedDocs"><dl class="clearfix">
+              <dt><span>deletedDocs:</span></dt>
+                <dd></dd>
+            </dl></li>
+
             <li class="optimized"><dl class="clearfix">
               <dt><span>optimized:</span></dt>
                 <dd class="ico"><span></span></dd>
